HelloUltraviolet/Fixtures/RejectedSource/Attributes/TestInvalidAuthorityParameter/Source/Main.uv
//! Rejected source-native test attribute specimen for an invalid runner authority parameter.

[[test]]
public procedure testInvalidAuthorityParameterReference(value: i32) -> bool
|: => @result
{
    return value == value
}
